# multiagent-researcher

./: .env.example  .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/: main.py  settings.py  state.py
src/agents/: content_team.py  research_team.py  supervisor.py
src/examples/: research_example.py
src/tests/: fixtures.py  test_research.py  utils.py
